<resources>
    <string name="app_name">Catalog Movie</string>
    <!--<string name="top_rated">Top_Rated</string>-->
    <string name="popular">Popular</string>
    <string name="movie_title">Movie Title</string>
    <string name="top_rating">Top Rating</string>
    <string name="cari_film">Search Film</string>
    <string name="search_hint">Search Here</string>
    <string name="loading">Loading</string>
    <string name="tulis_film_yang_dicari">Search Your Movie Here</string>
    <string name="search">Search</string>
    <string name="masukkan_nama_film">Search Movie Movie</string>
    <string name="nama_movie">Movie Name</string>
    <string name="cari">Search</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date of Release</string>
    <string name="title_activity_cari">SearchActivity</string>
    <string name="rating">Rating "\n"</string>
    <string name="release_date">Release date \n</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_movie">DetailMovie</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="err_load_failed">Load Field</string>
    <string name="catalog_movie">Catalog Movie</string>
    <string name="title_activity_navbar">Navbar</string>
    <string name="title_activity_up_coming">Up Coming</string>
    <string name="title_activity_Now_Playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="now_playing">Now Playing</string>
    <string name="change_language">Change Language</string>
    <string name="tempat_informasi_film_up_to_date">The place to find the most up to date movies</string>
    <string name="share_description">Hai guys apa kalian ingin mencari tahu info tentang film terbaru? Yuk Kalian bisa download Aplikasinya disini </string>
    <string name="favorite">Favorite</string>
</resources>
