<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/upcoming"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/nav_nowplaying"
            android:layout_height="wrap_content"
            android:icon="@drawable/nowplaying"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star"
            android:title="@string/favorite" />

    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_bahasa"
                android:icon="@drawable/language"
                android:title="@string/change_language" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
